--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
   "bugs": "https://github.com/Q300Z/CineReact/issues",
   "homepage": "https://q300z.github.io/CineReact/",
   "repository": "https://github.com/Q300Z/CineReact",
-  "keywords": ["React", "TP", "Cesi", "Github Page","Film", "TMDB"],
+  "keywords": [
+    "React",
+    "TP",
+    "Cesi",
+    "Github Page",
+    "Film",
+    "TMDB"
+  ],
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --host"
+    "preview": "vite preview --host",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -29,6 +37,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
